<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <groupId>com.codenameone.guibuilder</groupId>
    <artifactId>cn1-guibuilder</artifactId>
    <version>8.0-SNAPSHOT</version>
    <packaging>pom</packaging>
    <name>Codename One GUI Builder</name>
    <description>Modern, Maven-first visual editor for Codename One GUI forms.</description>
    <url>https://www.codenameone.com</url>
    <licenses><license><name>GPL v2 With Classpath Exception</name><url>https://openjdk.java.net/legal/gplv2+ce.html</url><distribution>repo</distribution></license></licenses>
    <developers>
        <developer><id>shai</id><name>Shai Almog</name><email>shai.almog@codenameone.com</email><timezone>+4</timezone></developer>
        <developer><id>chen</id><name>Chen Fishbein</name><email>chen.fishbein@codenameone.com</email><timezone>+4</timezone></developer>
        <developer><id>shannah</id><name>Steve Hannah</name><email>steve.hannah@codenameone.com</email><timezone>-8</timezone></developer>
    </developers>
    <scm><url>https://github.com/codenameone/CodenameOne</url><connection>scm:git:git@github.com:codenameone/CodenameOne.git</connection></scm>
    <modules><module>common</module></modules>
    <properties>
        <cn1.version>8.0-SNAPSHOT</cn1.version>
        <cn1.plugin.version>8.0-SNAPSHOT</cn1.plugin.version>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <!-- The editor has to load on whatever JDK the project it edits already builds with, so it
             is a Java 8 artifact like the rest of Codename One. Nothing here may use a language
             feature or JDK API newer than 8. -->
        <java.version>1.8</java.version>
        <maven.compiler.source>1.8</maven.compiler.source>
        <maven.compiler.target>1.8</maven.compiler.target>
        <maven-compiler-plugin.version>3.11.0</maven-compiler-plugin.version>
        <cn1app.name>cn1-guibuilder</cn1app.name>
    </properties>
    <dependencyManagement><dependencies>
        <dependency><groupId>com.codenameone</groupId><artifactId>codenameone-core</artifactId><version>${cn1.version}</version></dependency>
        <dependency><groupId>com.codenameone</groupId><artifactId>codenameone-javase</artifactId><version>${cn1.version}</version></dependency>
    </dependencies></dependencyManagement>
    <build><pluginManagement><plugins>
        <plugin><groupId>com.codenameone</groupId><artifactId>codenameone-maven-plugin</artifactId><version>${cn1.plugin.version}</version></plugin>
        <plugin><groupId>org.apache.maven.plugins</groupId><artifactId>maven-compiler-plugin</artifactId><version>${maven-compiler-plugin.version}</version></plugin>
        <plugin><groupId>org.apache.maven.plugins</groupId><artifactId>maven-surefire-plugin</artifactId><version>3.2.2</version></plugin>
        <plugin><groupId>org.apache.maven.plugins</groupId><artifactId>maven-jar-plugin</artifactId><version>3.3.0</version></plugin>
        <plugin><groupId>org.apache.maven.plugins</groupId><artifactId>maven-dependency-plugin</artifactId><version>3.6.1</version></plugin>
    </plugins></pluginManagement><plugins>
        <plugin><groupId>com.codenameone</groupId><artifactId>codenameone-maven-plugin</artifactId><version>${cn1.plugin.version}</version></plugin>
    </plugins></build>
    <profiles>
        <profile><id>javase</id><activation><property><name>codename1.platform</name><value>javase</value></property><activeByDefault>true</activeByDefault></activation><modules><module>javase</module></modules></profile>
        <profile><id>guibuilder-central</id><build><plugins>
            <plugin><groupId>org.apache.maven.plugins</groupId><artifactId>maven-source-plugin</artifactId><version>3.3.0</version><executions><execution><id>attach-sources</id><goals><goal>jar-no-fork</goal></goals></execution></executions></plugin>
            <plugin><groupId>org.apache.maven.plugins</groupId><artifactId>maven-javadoc-plugin</artifactId><version>3.6.3</version><configuration><doclint>none</doclint><failOnError>false</failOnError></configuration><executions><execution><id>attach-javadocs</id><goals><goal>jar</goal></goals></execution></executions></plugin>
            <plugin><groupId>org.apache.maven.plugins</groupId><artifactId>maven-gpg-plugin</artifactId><version>1.5</version><executions><execution><id>sign-artifacts</id><phase>verify</phase><goals><goal>sign</goal></goals><configuration><passphrase>${gpg.passphrase}</passphrase></configuration></execution></executions><configuration><gpgArguments><arg>--pinentry-mode</arg><arg>loopback</arg></gpgArguments></configuration></plugin>
            <plugin><groupId>org.sonatype.central</groupId><artifactId>central-publishing-maven-plugin</artifactId><version>0.8.0</version><extensions>true</extensions><configuration><publishingServerId>central</publishingServerId><autoPublish>true</autoPublish></configuration></plugin>
        </plugins></build></profile>
    </profiles>
</project>
